# FastApiKGF

./: .gitignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml  ruff.toml
fastapi-kgf/: .env.tempalte  app_lifespan.py  main.py
fastapi-kgf/api/: __init__.py
fastapi-kgf/api/api_v1/: __init__.py  auth.py  fastapi_users_router.py  programs.py  user.py  users.py
fastapi-kgf/api/dependencies/: backend.py  fastapi_users_router.py  strategy.py  user_manager.py  users.py
fastapi-kgf/core/: config.py  enums.py
fastapi-kgf/core/authentication/: user_manager.py
fastapi-kgf/core/config/: __init__.py  access_token.py  admin.py  api.py  database.py  platforms.py  redis_db.py  session.py  settings.py  superuser.py
fastapi-kgf/core/models/: __init__.py  access_token.py  base.py  db_helper.py  message.py  message_file.py  messages.py  programs.py  task.py  tasks.py  user.py
fastapi-kgf/core/schemas/: __init__.py  message.py  tasks.py  (+3 more)
fastapi-kgf/crud/: programs.py  user.py  user_exceptions.py
fastapi-kgf/dependencies/: auth.py  auth_admin.py  auth_user.py  message.py  providers.py  session.py  session_auth.py
fastapi-kgf/misc/: auth.py
fastapi-kgf/parsers/: core.py
fastapi-kgf/rest/: __init__.py  auth.py  home.py  home_router.py  main_views.py  programs.py  tasks.py  tenders.py  test.py
fastapi-kgf/schemas/: programs.py
fastapi-kgf/services/: files.py
fastapi-kgf/tempaltes/: base.html
fastapi-kgf/templates/: base.html  home.html  home_page.html  login.html  my-profile.html  programs.html  tasks.html  tenders.html
fastapi-kgf/templating/: jinja_template.py
fastapi-kgf/utils/: __init__.py  file_size.py  hash_password.py  password_service.py
(+67 files in other folders)
