[project]
name = "fastapikgf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "beautifulsoup4>=4.14.3",
    "defusedxml>=0.7.1",
    "fastapi[standard]>=0.128.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
    "types-defusedxml>=0.7.0.20250822",
    "types-requests>=2.32.4.20260107",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]


[tool.mypy]
strict = true
